--- a/esp32_node_wifi/platformio.ini
+++ b/esp32_node_wifi/platformio.ini
@@ -18,5 +18,13 @@ board_build.flash_mode = qio
 monitor_speed = 115200
 board_build.partitions = partitions.csv
 lib_deps = 
-	hideakitai/ArtNet@^0.2.12
-	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	https://github.com/claudeheintz/LXESP32DMX
+	rstephan/ArtnetWifi@^1.5.1
+
+build_flags = -DCORE_DEBUG_LEVEL=1 
+; LOG_LEVEL_NONE       (0)
+; LOG_LEVEL_ERROR      (1)
+; LOG_LEVEL_INFO       (3)
+; LOG_LEVEL_DEBUG      (4)
+; LOG_LEVEL_WARN       (2)
+; LOG_LEVEL_VERBOSE    (5)
