--- a/esp32_node_wifi/platformio.ini
+++ b/esp32_node_wifi/platformio.ini
@@ -9,7 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32]
-platform = https://github.com/platformio/platform-espressif32.git
+platform = https://github.com/platformio/platform-espressif32#v3.2.0
+; platform = https://github.com/platformio/platform-espressif32.git
 board = mhetesp32devkit
 framework = arduino
 board_build.f_cpu = 240000000L
@@ -18,10 +19,13 @@ board_build.flash_mode = qio
 monitor_speed = 115200
 board_build.partitions = partitions.csv
 lib_deps = 
-	https://github.com/claudeheintz/LXESP32DMX
+	; https://github.com/claudeheintz/LXESP32DMX
+     https://github.com/claudeheintz/LXESP32DMX#old_esp32
+; attention change le fichier esp32-hal-uart.c de C:\Users\ririf\.platformio\packages\framework-arduinoespressif32@3.10006.210326\cores\esp32
+; par celui .pio\libdeps\esp32\LXESP32DMX\extras\modified_hal-uart\1.0.5
 	rstephan/ArtnetWifi@^1.5.1
 
-build_flags = -DCORE_DEBUG_LEVEL=1 
+build_flags = -DCORE_DEBUG_LEVEL=4 
 ; LOG_LEVEL_NONE       (0)
 ; LOG_LEVEL_ERROR      (1)
 ; LOG_LEVEL_INFO       (3)
