--- a/esp32_node_wifi/platformio.ini
+++ b/esp32_node_wifi/platformio.ini
@@ -19,6 +19,7 @@ board_build.flash_mode = qio
 monitor_speed = 115200
 board_build.partitions = partitions.csv
 lib_deps = 
+    links2004/WebSockets @ ^2.3.1
 	; https://github.com/claudeheintz/LXESP32DMX
      https://github.com/claudeheintz/LXESP32DMX#old_esp32
 ; attention change le fichier esp32-hal-uart.c de C:\Users\ririf\.platformio\packages\framework-arduinoespressif32@3.10006.210326\cores\esp32
