--- a/esp32_node_wifi/platformio.ini
+++ b/esp32_node_wifi/platformio.ini
@@ -10,7 +10,6 @@
 
 [env:esp32]
 platform = https://github.com/platformio/platform-espressif32#v3.2.0
-; platform = https://github.com/platformio/platform-espressif32.git
 board = mhetesp32devkit
 framework = arduino
 board_build.f_cpu = 240000000L
@@ -19,17 +18,8 @@ board_build.flash_mode = qio
 monitor_speed = 115200
 board_build.partitions = partitions.csv
 lib_deps = 
-    links2004/WebSockets @ ^2.3.1
-	; https://github.com/claudeheintz/LXESP32DMX
-     https://github.com/claudeheintz/LXESP32DMX#old_esp32
-; attention change le fichier esp32-hal-uart.c de C:\Users\ririf\.platformio\packages\framework-arduinoespressif32@3.10006.210326\cores\esp32
-; par celui .pio\libdeps\esp32\LXESP32DMX\extras\modified_hal-uart\1.0.5
+	links2004/WebSockets @ ^2.3.1
+	https://github.com/claudeheintz/LXESP32DMX#old_esp32
 	rstephan/ArtnetWifi@^1.5.1
-
-build_flags = -DCORE_DEBUG_LEVEL=4 
-; LOG_LEVEL_NONE       (0)
-; LOG_LEVEL_ERROR      (1)
-; LOG_LEVEL_INFO       (3)
-; LOG_LEVEL_DEBUG      (4)
-; LOG_LEVEL_WARN       (2)
-; LOG_LEVEL_VERBOSE    (5)
+	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.3.0
+build_flags = -DCORE_DEBUG_LEVEL=4
