--- a/esp32_node_wifi/platformio.ini
+++ b/esp32_node_wifi/platformio.ini
@@ -22,4 +22,11 @@ lib_deps =
 	https://github.com/claudeheintz/LXESP32DMX#old_esp32
 	rstephan/ArtnetWifi@^1.5.1
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.3.0
-build_flags = -DCORE_DEBUG_LEVEL=4
+build_flags = -DCORE_DEBUG_LEVEL=0
+
+; LEVEL_NONE       (0)
+; LEVEL_ERROR      (1)
+; LEVEL_WARN       (2)
+; LEVEL_INFO       (3)
+; LEVEL_DEBUG      (4)
+; LEVEL_VERBOSE    (5)
